2007-06-26  Inge Wallin  <inge@lysator.liu.se>

	Break out search for label space.
	* src/lib/placemarkpainter.{h,cpp} (roomForLabel): new function
	* src/lib/placemarkpainter.cpp (paintPlaceFolder): call roomForLabel

	* src/lib/placemarkpainter.h
	(PlaceMarkPainter::m_visiblePlaceMarks): use QList instead of QVector
	* src/lib/placemarkpainter.cpp (paintPlaceFolder): Almost make the
	QPixmap cache work.

2007-06-25  Inge Wallin  <inge@lysator.liu.se>

	Split out the check for visibility of a PlaceMark
	* src/lib/placemarkpainter.{h,cpp} (paintPlaceFolder): take
	width/height as parameters instead of the same/2.
	(paintPlaceFolder): call isVisible.
	(isVisible): New method
	* src/lib/MarbleModel.cpp (paintGlobe): Use new call signature for
	paintPlaceFolder

	Cleaning in preparation for a bugfix
	* src/lib/GridMap.cpp:  Cleaning 
	 (createTropics): Show the tropics/polar circles already at radius=400
	* src/lib/MarbleWidget.cpp (centerOn): Remove superfluous code

2007-06-24  Inge Wallin  <inge@lysator.liu.se>

	Cleaning while learning the code
	* src/lib/placamarkmanager.h: Comment
	* src/lib/MarbleModel.cpp: Comments and cleaning

2007-06-23  Inge Wallin  <inge@lysator.liu.se>

	Add support for setting the home point and zoom (not working yet)
	* src/lib/MarbleWidget.cpp (class MarbleWidgetPrivate): new
	methods: m_homePoint and m_homeZoom
	* src/lib/MarbleWidget.{h,cpp} (setHome): New method
	* src/lib/MarbleModel.{h,cpp} (rotateTo): new method

2007-06-22  Inge Wallin  <inge@lysator.liu.se>

	Cleaning
	* src/lib/MarbleWidget.{h,cpp}: Cleaning

	Fix a bug where wrong PlaceMark was reused.
	* src/lib/placemarkpainter.cpp (class VisiblePlaceMark): new method
	(paintPlaceFolder): Set PlaceMark when a VisiblePlaceMark is reused.

	Optimize memory usage by only save labels for those PlaceMarks
	that are actually visible.
	* src/lib/placemark.h (class PlaceMark): Remove members
	m_symbolPixmap, m_symbolPos, m_labelPixmap, m_textRect, m_visible