@@ -1,3 +1,11 @@
+2007-06-27  Inge Wallin  <inge@lysator.liu.se>
+
+	Temporarily bring back the old paintPlaceFolder due to problems
+	just before the tagging of KDE alpha2.
+	* src/lib/placemarkpainter.{h,cpp} (paintPlaceFolder): Bring back
+	the old version.
+	* src/lib/placemark.{h,cpp}: Bring back old members
+
 2007-06-26  Inge Wallin  <inge@lysator.liu.se>
 
 	Break out search for label space.
